k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: data-ingestion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery
      role: worker
  template:
    metadata:
      labels:
        app: celery
        role: worker
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-2
      containers:
        - name: celery
          image: harbor.home.badre2dine.dev/trading_data_ingest/data-ingest-worker:latest
          resources:
            requests:
              cpu: "125m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1024Mi"
          volumeMounts:
            - name: parquet-data
              mountPath: /data/parquet
      imagePullSecrets:
        - name: harbor-creds
      volumes:
        - name: parquet-data
          persistentVolumeClaim:
            claimName: parquet-pvc
