k8s/streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pair-tick-streamer-btc-usdt
  namespace: data-ingestion
  labels:
    app: pair-tick-streamer
    pair: btc-usdt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pair-tick-streamer
      pair: btc-usdt
  template:
    metadata:
      labels:
        app: pair-tick-streamer
        pair: btc-usdt
    spec:
      containers:
        - name: tick-streamer
          image: harbor.home.badre2dine.dev/trading_data_ingest/data-ingest-streamer:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
      imagePullSecrets:
        - name: harbor-creds
