k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-api
  namespace: data-ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-api
  template:
    metadata:
      labels:
        app: ingestion-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-2
      containers:
        - name: api
          image: harbor.home.badre2dine.dev/trading_data_ingest/data-ingest-api:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: harbor-creds
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-api
  namespace: data-ingestion
spec:
  selector:
    app: ingestion-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
